Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -13,6 +13,9 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
+    - bash: apt-get update
+    - bash: apt-get upgrade
+    - bash: apt-get install make
     - task: Docker@2
       inputs:
         containerRegistry: 'mova21 Container Registry'
