--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.12.10",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fullcalendar/bootstrap": "^5.7.0",
     "@fullcalendar/core": "^5.7.0",
     "@fullcalendar/daygrid": "^5.7.0",
     "@fullcalendar/interaction": "^5.6.0",
@@ -27,8 +28,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "react-recompose": "^0.31.1",
     "react_ujs": "^2.6.1",
-    "sortablejs": "^1.13.0",
     "ts-loader": "^8.0.14",
     "turbolinks": "^5.2.0",
     "typescript": "^4.1.3"
