--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
         UID: ${UID}
         GID: ${GID}
     volumes:
-      - .:/app:delegated
+      - .:/app
       - ./config/database.docker.yml:/app/config/database.yml:ro
+      - ~/.composer/docker-cache/:/root/.composer
       # - ./tmp/fonts/mova:/app/app/webpacker/fonts/mova:ro
     ports:
       - "3000:3000"
