--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ MIDATA_USER_TOKEN=Tu7aVJWyLYYMyCnZv2bz
 LIMESURVEY_USERNAME=
 LIMESURVEY_PASSWORD=
 LIMESURVEY_SURVEY_ID=187799
+CAMP_START:
+CAMP_END: ${CAMP_END}
 # STORAGE_SERVICE=azure
 # STORAGE_ACCOUNT_NAME=
 # STORAGE_ACCESS_KEY=
