--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,8 @@ MIDATA_USER_TOKEN=Tu7aVJWyLYYMyCnZv2bz
 LIMESURVEY_USERNAME=
 LIMESURVEY_PASSWORD=
 LIMESURVEY_SURVEY_ID=187799
-CAMP_START:
-CAMP_END: ${CAMP_END}
+CAMP_START: "2022-07-23"
+CAMP_END: "2022-08-06"
 # STORAGE_SERVICE=azure
 # STORAGE_ACCOUNT_NAME=
 # STORAGE_ACCESS_KEY=
