--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 OIDC_CLIENT_ID=orca
-OIDC_ISSUER=
-OIDC_CLIENT_SECRET_KEY=
+OIDC_ISSUER=https://auth.bula21.ch/auth/realms/Test
+OIDC_CLIENT_SECRET_KEY=7f7f2adf-f6e2-425a-96bc-8de1e250bc78
 APP_BASE_URL=
 DATABASE_URL=
 SECRET_KEY_BASE=
