--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,8 @@ services:
       SMTP_PASSWORD: ""
       SMTP_PORT: 25
       SMTP_AUTH: ${SMTP_AUTH:-plain}
-      FEATURES: "unit_activity_booking"
+      CAMP_START: ${CAMP_START:-2022-07-23}
+      CAMP_END: ${CAMP_START:-2022-08-06}
     depends_on:
       - db
       - mail
